# spark

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/spark/: __init__.py  autograd.py  datasets.py
src/spark/backends/: backend_metal.cpp  backend_metal.pyi  backend_np.py
tests/: test_sparke.py
